<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tw.com.csie.chiu.calculator.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTXT"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_7"
        android:id="@+id/Btn_7"
        android:layout_below="@+id/editTXT"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_8"
        android:id="@+id/Btn_8"
        android:layout_alignTop="@+id/Btn_7"
        android:layout_toRightOf="@+id/Btn_7"
        android:layout_toEndOf="@+id/Btn_7"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_9"
        android:id="@+id/Btn_9"
        android:layout_below="@+id/editTXT"
        android:layout_toRightOf="@+id/Btn_8"
        android:layout_toEndOf="@+id/Btn_8"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_4"
        android:id="@+id/Btn_4"
        android:layout_below="@+id/Btn_7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_5"
        android:id="@+id/Btn_5"
        android:layout_below="@+id/Btn_7"
        android:layout_toRightOf="@+id/Btn_4"
        android:layout_toEndOf="@+id/Btn_4"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_6"
        android:id="@+id/Btn_6"
        android:layout_below="@+id/Btn_8"
        android:layout_toRightOf="@+id/Btn_5"
        android:layout_toEndOf="@+id/Btn_5"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_1"
        android:id="@+id/Btn_1"
        android:layout_below="@+id/Btn_4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_2"
        android:id="@+id/Btn_2"
        android:layout_alignTop="@+id/Btn_1"
        android:layout_toRightOf="@+id/Btn_1"
        android:layout_toEndOf="@+id/Btn_1"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_3"
        android:id="@+id/Btn_3"
        android:layout_below="@+id/Btn_5"
        android:layout_toRightOf="@+id/Btn_2"
        android:layout_toEndOf="@+id/Btn_2"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_0"
        android:id="@+id/Btn_0"
        android:layout_below="@+id/Btn_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_Div"
        android:id="@+id/Btn_Div"
        android:layout_alignTop="@+id/Btn_8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_Mul"
        android:id="@+id/Btn_Mul"
        android:layout_below="@+id/Btn_8"
        android:layout_alignRight="@+id/Btn_Div"
        android:layout_alignEnd="@+id/Btn_Div"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_Min"
        android:id="@+id/Btn_Min"
        android:layout_below="@+id/Btn_5"
        android:layout_alignRight="@+id/Btn_Mul"
        android:layout_alignEnd="@+id/Btn_Mul"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_Add"
        android:id="@+id/Btn_Add"
        android:layout_below="@+id/Btn_2"
        android:layout_alignRight="@+id/Btn_Min"
        android:layout_alignEnd="@+id/Btn_Min"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_Clear"
        android:id="@+id/Btn_Clear"
        android:textSize="20sp"
        android:layout_below="@+id/Btn_2"
        android:layout_alignLeft="@+id/Btn_2"
        android:layout_alignStart="@+id/Btn_2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Btn_Ans"
        android:id="@+id/Btn_Ans"
        android:textSize="20sp"
        android:layout_below="@+id/Btn_2"
        android:layout_toRightOf="@+id/Btn_Clear"
        android:layout_toEndOf="@+id/Btn_Clear" />
</RelativeLayout>
